# Daniel-Porter

./: deprecated.py  helpers.py  iden.py  main.py  opinions.py  phrases.py  plan.txt  plan2opinion.txt  pyproject.toml  readme.md
api/: fetchWikipedia.py
plans/: plan.txt
storedData/: iden.py  opinions.py  phrases.py
