[tool.poetry]
name = "repl_python3_The-Turing-Test-L5CSY-DJH-1"
version = "0.1.0"
description = ""
authors = ["Marshall-R-20 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
datamart-isi = "^2.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
